@@ -1,3 +1,5 @@
+1/7/12 encapsulate challenge factory choice in ChallengeFactory.createChallenges
+1/7/12 move hard-coded challenges to their own factory class
 1/3/13 fix: for P3P challenges, show "not a line" when guess is not a line (broken during refactoring from 0.00.44 to 0.00.45)
 1/2/13 when P3P is correct, set the guess to the answer, so that equations will match
 1/2/13 first pass at challenge generation for level=2
